Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64562

WebEngine segfaults with Qt Quick software backend

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.9.3, 5.10.0 RC
    • 5.9.3, 5.10.0 RC
    • WebEngine
    • None

      Running

      QT_QUICK_BACKEND=software ./simplebrowser
      

      results in a segfault.

      Reverting the qtdeclarative patch https://codereview.qt-project.org/209630 fixes the issue. This patch changes the software backend to assume that image nodes always have a texture, but in DelegatedNodeTreeCreator::setupRenderPassNode we sometimes create image nodes without textures. This leads to a null pointer dereference in qsgsoftwarerenderablenode.cpp:155.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            juri.valdmann Jüri Valdmann (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes