Stop creating image nodes without textures

Triggers segfault when using software backend.

Task-number: QTBUG-64562
Change-Id: Ib7c55c8480cbccd5a546813d84021b57bb02d067
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Michael Brüning <michael.bruning@qt.io>